--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -72,6 +72,7 @@
                             <div>
                                 {% include '_settings_module_global.html' %}
                                 {% include '_settings_module_dates.html' %}
+                                {% include '_settings_module_timers.html' %}
                                 </div>
                         </template>
                     </form>
