--- a/app/templates/_settings_module_dates.html
+++ b/app/templates/_settings_module_dates.html
@@ -1,6 +1,5 @@
 <div class="settings-module">
     <h2 x-text="$store.app.lang['settings_section_dates'] || 'Ключевые Даты'"></h2>
-
     <p class="form-description module-description" x-html="$store.app.lang['settings_desc_section_dates'] || 'Основные даты...'"></p>
 
     <div class="setting-row date-time-row">
@@ -8,12 +7,10 @@
             <label for="setting-date-departure" x-text="$store.app.lang['settings_date_departure_label'] || 'Дата Отъезда'"></label>
             <div class="date-time-inputs">
                 <input type="date" id="setting-date-departure"
-                       :value="getDatePart('date_vova_departure')"
-                       @change.debounce.250ms="updateDateTime('date_vova_departure', 'date', $event.target.value)">
+                       x-model="form.date_vova_departure_date">
                 <input type="time" id="setting-time-departure"
                        step="1"
-                       :value="getTimePart('date_vova_departure')"
-                       @change.debounce.250ms="updateDateTime('date_vova_departure', 'time', $event.target.value)">
+                       x-model="form.date_vova_departure_time">
             </div>
         </div>
         <div class="reset-button-placeholder">
@@ -28,19 +25,17 @@
             <label for="setting-date-arrival" x-text="$store.app.lang['settings_date_arrival_label'] || 'Дата Приезда'"></label>
             <div class="date-time-inputs">
                 <input type="date" id="setting-date-arrival"
-                       :value="getDatePart('date_vova_arrival')"
-                       @change.debounce.250ms="updateDateTime('date_vova_arrival', 'date', $event.target.value)">
+                       x-model="form.date_vova_arrival_date">
                 <input type="time" id="setting-time-arrival"
                        step="1"
-                       :value="getTimePart('date_vova_arrival')"
-                       @change.debounce.250ms="updateDateTime('date_vova_arrival', 'time', $event.target.value)">
+                       x-model="form.date_vova_arrival_time">
             </div>
         </div>
          <div class="reset-button-placeholder">
             <button type="button" class="reset-default-btn" title="Сбросить дату приезда к значению по умолчанию"
                     @click="resetField('date_vova_arrival')">↺</button>
         </div>
-        <p class="form-description" x-html="$store.app.lang['settings_date_arrival_desc'] || 'Конец календаря, цель таймера До Встречи.'"></p>
+        <p class="form-description" x-html="$store.app.lang['settings_date_arrival_desc'] || 'Конец календаря...'"></p>
     </div>
 
     <div class="setting-row date-time-row">
@@ -48,12 +43,10 @@
             <label for="setting-date-relationship" x-text="$store.app.lang['settings_date_relationship_label'] || 'Дата Начала Отношений'"></label>
             <div class="date-time-inputs">
                  <input type="date" id="setting-date-relationship"
-                       :value="getDatePart('date_relationship_start')"
-                       @change.debounce.250ms="updateDateTime('date_relationship_start', 'date', $event.target.value)">
+                       x-model="form.date_relationship_start_date">
                  <input type="time" id="setting-time-relationship"
                        step="1"
-                       :value="getTimePart('date_relationship_start')"
-                       @change.debounce.250ms="updateDateTime('date_relationship_start', 'time', $event.target.value)">
+                       x-model="form.date_relationship_start_time">
             </div>
         </div>
          <div class="reset-button-placeholder">
