--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -73,6 +73,7 @@
                                 {% include '_settings_module_global.html' %}
                                 {% include '_settings_module_dates.html' %}
                                 {% include '_settings_module_timers.html' %}
+                                {% include '_settings_module_calendar.html' %}
                                 </div>
                         </template>
                     </form>
